public/css/style.css
.msg {text-align: center;}
#game {margin-top:20px; }
#game .hero-unit {
	text-align:center;
}
#game .hero-unit .init {	min-height:300px;}
#game input[type=text] {padding:20px;margin-top:20px;}
#game h2#winner.you {color:green;}
#game h2#winner.other {color:red;}
#game .screen_name {background-color:#008ACA;}
#game .user_column {background-color:#DAF6F8;  min-height:300px}
#game .user_column > div {padding:10px;;}
#game .user_avatar {height:120px;background-size:100%;padding:10px;overflow-x:hidden; }
#game .user_screen_name {background:rgba(0,0,0,0.3);margin-top:-38px;color:#fff;text-align:center;padding:10px 0;}
#game h1.score {text-align:center;padding:20px;}
#game .puntuacion {text-align:center;margin-top:20px;}
#game .main-button {padding:30px 60px;font-size:30px;margin-top:30px;}
#game #status {margin-top:20px;}
#game .modal {background-color: transparent; -webkit-box-shadow:0px; border:0px;overflow: hidden; -webkit-box-shadow:none;}
#game #starting-countdown .modal-bdy {font-size:56px; color: #FFF; line-height: 56px; text-align:center;}
#game #starting-countdown .starting-countdown-numbers {font-size:200px; color: #FFF; padding: 80px; text-align:center;}
#game #winner-alert .modal-bdy {font-size:48px; color: #FFF; padding: 5px; text-align:center; line-height:58px;}
#game .user_column.admin{background-color: #F0B45A;}
#time_limit{font-size: 19px;height: 36px;margin-top: 9px;}

.game_summary .status{
	text-align: center;
}
.game_summary .game_link:hover{
	text-decoration: none;
}
.game_summary .faces{
	margin:0 -18px;
}
.game_summary .face{
	float:left;
	list-style: none;
}

.game_summary .status.top{
	margin-bottom:4px;
}
.game_summary .status.bottom{
	margin-top:4px;
}

.correct_letters{
	color:green;
	border-bottom: 5px solid green;
}
.error_letters{
	color:red;
	border-bottom: 5px solid red;
}
.left_letters{
	color:gray;
}

